<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/txt_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_ip" />

    <EditText
        android:id="@+id/edit_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_ip" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txt_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_port" />

    <EditText
        android:id="@+id/edit_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_port"
        android:inputType="number" />

    <Button
        android:id="@+id/btn_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_connect" />

    <TextView
        android:id="@+id/txt_receive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_receive" />

    <EditText
        android:id="@+id/edit_receive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/edit_receive" />

    <TextView
        android:id="@+id/txt_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_send" />

    <EditText
        android:id="@+id/edit_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/edit_send" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_send" />

</LinearLayout>
